FBINTF Change Log  version          (1.4-5 Build 1238) Mon, 20 Jan 2025 11:45:29 +0000

1. TSQLParam.Clear now resets the SQL Type (if it was changed when setting the param)
   and re-initialises the underlying data structure.

2. TSQLParam.InternalSetString now clears the param before setting the value (also see above).

3. When IStatement.Prepare is executed the underlying data structures are freed and then
   re-created thus ensuring that there are no "left overs" from a previous use.

FBINTF Change Log  version          (1.4-4 Build 1238) Mon, 20 Jan 2025 11:45:29 +0000

1. FB30Blob. Removed unnecessary Firebird.IAttachment.release from close and cancel methods
   when operation does not result in an error.

2. FB30Attachment. Review of Firebird.IAttachment addref/release methods. Specifically,
   addref is no longer called after attach to existing database and hence release no
   longer called after detach or dropdatabase.

3. Remove unnecessary addRef and Release in FB30Transaction.

4. Remove erroneous release after event cancel.

FBINTF Change Log  version          (1.4-3 Build 1233) Tue, 14 Jan 2025 14:47:27 +0000

1. Time with Time Zone: when a ISQLParam is set to a variant value and the value is
   and array comprising a TDateTime and a Time Zone String. The first element
   may now be NULL. This sets the param value to null.

2. Avoid object is nil error if Firebird Library fails to load.

3. fbude and fbusrtestbed packages now include description and licence
info.

FBINTF Change Log  version          (1.4-2 Build 15853) Fri, 12 Jul 2024 13:41:21 +0100

1. IBUtils.FormatTimeZoneOffset A zero offset now includes a preceding '+' sign.

2. TFBStatement.DoJournaling now exits immediately if journaling is not active. The
   motivation for this is to avoid calling the Firebird API function 'getInfo'
   unnecesarily. This function can return an error if an incompatible parameter type was