@@ -121,6 +121,7 @@ var Transaction: ITransaction;
     Statement,
     Statement2: IStatement;
     ResultSet: IResultSet;
+    CharSetWidth: integer;
 begin
   Transaction := Attachment.StartTransaction([isc_tpb_write,isc_tpb_nowait,isc_tpb_concurrency],taCommit);
 
@@ -173,6 +174,42 @@ begin
     Statement := Attachment.Prepare(Transaction,'Select * from TestData');
     ReportResults(Statement);
   end;
+
+  writeln(OutFile,'Test text blob optimisation - short text followed by long');
+  Statement := Attachment.Prepare(Transaction,'Insert into  TestData(RowID,BlobData) Values(?,?)');
+  writeln(OutFile,'Params after prepare');
+  ParamInfo(Statement.SQLParams);
+  if not Attachment.CharSetWidth(Statement.SQLParams[1].GetCharSetID,CharSetWidth) then
+    CharSetWidth := 4; {assume UTF8}
+  Attachment.SetInlineBlobLimit(80*CharSetWidth); {reduce limit to 80 chars}
+  Statement.SQLParams[0].AsInteger := 3;
+  Statement.SQLParams[1].AsString := 'The Quick Brown Fox Jumps over the Lazy Dog';
+  writeln(OutFile,'Params after setting values');
+  ParamInfo(Statement.SQLParams);
+  Statement.Execute;
+  Statement.SQLParams[0].AsInteger := 4;
+  Statement.SQLParams[1].AsString :=
+    'O Romeo, Romeo, wherefore art thou Romeo? '+
+    'Deny thy father and refuse thy name. '+
+    'Or if thou wilt not, be but sworn my love '+
+    'And I’ll no longer be a Capulet.'+
+    '‘Tis but thy name that is my enemy: '+
+    'Thou art thyself, though not a Montague. '+
+    'What’s Montague? It is nor hand nor foot '+
+    'Nor arm nor face nor any other part '+
+    'Belonging to a man. O be some other name. '+
+    'What’s in a name? That which we call a rose '+
+    'By any other name would smell as sweet; '+
+    'So Romeo would, were he not Romeo call’d, '+
+    'Retain that dear perfection which he owes '+
+    'Without that title. Romeo, doff thy name ,'+
+    'And for that name, which is no part of thee, '+
+    'Take all myself.';
+  ParamInfo(Statement.SQLParams);
+  Statement.Execute;
+  writeln(OutFile,'Text Blob Optimisation Results');
+  Statement := Attachment.Prepare(Transaction,'Select * from TestData Where RowID >= 3');
+  ReportResults(Statement);
 end;
 
 procedure TTest6.ExecProc(Attachment: IAttachment);
